--- a/index.html
+++ b/index.html
@@ -17,21 +17,22 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Document</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
+      <nav class="nav">
+        <a class="logo" href="./index.html">Web<span class="span">Studio</span></a>
         <ul>
-          <li><a href="">Studio</a></li>
+          <li class="list-1"><a href="./index.html">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
+      <address class="address">
+        <ul class="address-link">
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
@@ -43,36 +44,36 @@
     </header>
     <main>
       <section class="hero">
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <h1 class="h1-header">Effective Solutions for Your Business</h1>
+        <button class="button" type="button">Order Service</button>
       </section>
       <section>
         <h2>Advantages</h2>
-        <ul>
+        <ul class="section2-ul">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="h3">Strategy</h3>
+            <p class="p">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="h3">Punctuality</h3>
+            <p class="p">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="h3">Diligence</h3>
+            <p class="p">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="h3">Technologies</h3>
+            <p class="p">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -80,74 +81,74 @@
         </ul>
       </section>
       <section class="our-team">
-        <h2>Our Team</h2>
-        <ul>
+        <h2 class="h2">Our Team</h2>
+        <ul class="section3-ul">
           <li>
             <img src="./images/img1.jpg" width="264" alt="Image1" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="h3">Mark Guerrero</h3>
+            <p class="p">Product Designer</p>
           </li>
           <li>
             <img src="./images/img2.jpg" width="264" alt="image2" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="h3">Tom Ford</h3>
+            <p class="p">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img3.jpg" width="264" alt="image3" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="h3">Camila Garcia</h3>
+            <p class="p">Marketing</p>
           </li>
           <li>
             <img src="./images/img4.jpg" width="264" alt="image4" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="h3">Daniel Wilson</h3>
+            <p class="p">UI Designer</p>
           </li>
         </ul>
       </section>
       <section>
-        <h2>Our Portfolio</h2>
-        <ul>
+        <h2 class="our-portfolio">Our Portfolio</h2>
+        <ul class="section4-ul">
           <li>
-            <img src="./images/card1.jpg" alt="">
-            <h3>Banking App</h3>
-            <p>App</p>
+            <img src="./images/card1.jpg" width="360" alt="card1">
+            <h3 class="h3">Banking App</h3>
+            <p class="p">App</p>
           </li>
           <li>
-            <img src="./images/card2.jpg" alt="">
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <img src="./images/card2.jpg" width="360" alt="card2">
+            <h3 class="h3">Cashless Payment</h3>
+            <p class="p">Marketing</p>
           </li>
           <li>
-            <img src="./images/card3.jpg" alt="">
-            <h3>Meditation App</h3>
-            <p>App</p>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <img src="./images/card4.jpg" alt="">
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <img src="./images/card3.jpg" width="360" alt="card3">
+            <h3 class="h3">Meditation App</h3>
+            <p class="p">App</p>
           </li>
           <li>
-            <img src="./images/card5.jpg" alt="">
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <img src="./images/card4.jpg" width="360" alt="card4">
+            <h3 class="h3">Taxi Service</h3>
+            <p class="p">Marketing</p>
           </li>
           <li>
-            <img src="./images/card6.jpg" alt="">
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <img src="./images/card5.jpg" width="360" alt="card5">
+            <h3 class="h3">Screen Illustrations</h3>
+            <p class="p">Design</p>
+          </li>
+          <li>
+            <img src="./images/card6.jpg" width="360" alt="card6">
+            <h3 class="h3">Online Courses</h3>
+            <p class="p">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </footer>
+    <section class="footer-section">
+      <footer class="footer">
+        <a class="logo" href="./index.html">Web<span class="span">Studio</span></a>
+        <p class="p">
+          Increase the flow of customers and sales for your business with digital
+          marketing & growth solutions.
+        </p>
+      </footer>
+    </section>
   </body>
 </html>
