--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
@@ -11,20 +11,24 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
     <header>
       <nav class="nav">
-        <a class="logo" href="./index.html">Web<span class="span">Studio</span></a>
+        <a class="logo" href="./index.html"
+          >Web<span class="span">Studio</span></a
+        >
         <ul>
           <li class="list-1"><a href="./index.html">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -109,32 +113,32 @@
         <h2 class="our-portfolio">Our Portfolio</h2>
         <ul class="section4-ul">
           <li>
-            <img src="./images/card1.jpg" width="360" alt="card1">
+            <img src="./images/card1.jpg" width="360" alt="card1" />
             <h3 class="h3">Banking App</h3>
             <p class="p">App</p>
           </li>
           <li>
-            <img src="./images/card2.jpg" width="360" alt="card2">
+            <img src="./images/card2.jpg" width="360" alt="card2" />
             <h3 class="h3">Cashless Payment</h3>
             <p class="p">Marketing</p>
           </li>
           <li>
-            <img src="./images/card3.jpg" width="360" alt="card3">
+            <img src="./images/card3.jpg" width="360" alt="card3" />
             <h3 class="h3">Meditation App</h3>
             <p class="p">App</p>
           </li>
           <li>
-            <img src="./images/card4.jpg" width="360" alt="card4">
+            <img src="./images/card4.jpg" width="360" alt="card4" />
             <h3 class="h3">Taxi Service</h3>
             <p class="p">Marketing</p>
           </li>
           <li>
-            <img src="./images/card5.jpg" width="360" alt="card5">
+            <img src="./images/card5.jpg" width="360" alt="card5" />
             <h3 class="h3">Screen Illustrations</h3>
             <p class="p">Design</p>
           </li>
           <li>
-            <img src="./images/card6.jpg" width="360" alt="card6">
+            <img src="./images/card6.jpg" width="360" alt="card6" />
             <h3 class="h3">Online Courses</h3>
             <p class="p">Marketing</p>
           </li>
@@ -143,10 +147,12 @@
     </main>
     <section class="footer-section">
       <footer class="footer">
-        <a class="logo" href="./index.html">Web<span class="span">Studio</span></a>
+        <a class="logo" href="./index.html"
+          >Web<span class="span">Studio</span></a
+        >
         <p class="p">
-          Increase the flow of customers and sales for your business with digital
-          marketing & growth solutions.
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
         </p>
       </footer>
     </section>
