--- a/index.html
+++ b/index.html
@@ -55,29 +55,29 @@
         <h2>Advantages</h2>
         <ul class="section2-ul">
           <li>
-            <h3 class="h3">Strategy</h3>
-            <p class="p">
+            <h3 class="h33">Strategy</h3>
+            <p class="ppp">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="h3">Punctuality</h3>
-            <p class="p">
+            <h3 class="h33">Punctuality</h3>
+            <p class="ppp">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="h3">Diligence</h3>
-            <p class="p">
+            <h3 class="h33">Diligence</h3>
+            <p class="ppp">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="h3">Technologies</h3>
-            <p class="p">
+            <h3 class="h33">Technologies</h3>
+            <p class="ppp">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -85,27 +85,27 @@
         </ul>
       </section>
       <section class="our-team">
-        <h2 class="h2">Our Team</h2>
+        <h2 class="h22">Our Team</h2>
         <ul class="section3-ul">
           <li>
             <img src="./images/img1.jpg" width="264" alt="Image1" />
-            <h3 class="h3">Mark Guerrero</h3>
-            <p class="p">Product Designer</p>
+            <h3 class="h33">Mark Guerrero</h3>
+            <p class="ppp">Product Designer</p>
           </li>
           <li>
             <img src="./images/img2.jpg" width="264" alt="image2" />
-            <h3 class="h3">Tom Ford</h3>
-            <p class="p">Frontend Developer</p>
+            <h3 class="h33">Tom Ford</h3>
+            <p class="ppp">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img3.jpg" width="264" alt="image3" />
-            <h3 class="h3">Camila Garcia</h3>
-            <p class="p">Marketing</p>
+            <h3 class="h33">Camila Garcia</h3>
+            <p class="ppp">Marketing</p>
           </li>
           <li>
             <img src="./images/img4.jpg" width="264" alt="image4" />
-            <h3 class="h3">Daniel Wilson</h3>
-            <p class="p">UI Designer</p>
+            <h3 class="h33">Daniel Wilson</h3>
+            <p class="ppp">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -114,33 +114,33 @@
         <ul class="section4-ul">
           <li>
             <img src="./images/card1.jpg" width="360" alt="card1" />
-            <h3 class="h3">Banking App</h3>
-            <p class="p">App</p>
+            <h3 class="h33">Banking App</h3>
+            <p class="ppp">App</p>
           </li>
           <li>
             <img src="./images/card2.jpg" width="360" alt="card2" />
-            <h3 class="h3">Cashless Payment</h3>
-            <p class="p">Marketing</p>
+            <h3 class="h33">Cashless Payment</h3>
+            <p class="ppp">Marketing</p>
           </li>
           <li>
             <img src="./images/card3.jpg" width="360" alt="card3" />
-            <h3 class="h3">Meditation App</h3>
-            <p class="p">App</p>
+            <h3 class="h33">Meditation App</h3>
+            <p class="ppp">App</p>
           </li>
           <li>
             <img src="./images/card4.jpg" width="360" alt="card4" />
-            <h3 class="h3">Taxi Service</h3>
-            <p class="p">Marketing</p>
+            <h3 class="h33">Taxi Service</h3>
+            <p class="ppp">Marketing</p>
           </li>
           <li>
             <img src="./images/card5.jpg" width="360" alt="card5" />
-            <h3 class="h3">Screen Illustrations</h3>
-            <p class="p">Design</p>
+            <h3 class="h33">Screen Illustrations</h3>
+            <p class="ppp">Design</p>
           </li>
           <li>
             <img src="./images/card6.jpg" width="360" alt="card6" />
-            <h3 class="h3">Online Courses</h3>
-            <p class="p">Marketing</p>
+            <h3 class="h33">Online Courses</h3>
+            <p class="ppp">Marketing</p>
           </li>
         </ul>
       </section>
@@ -150,7 +150,7 @@
         <a class="logo" href="./index.html"
           >Web<span class="span">Studio</span></a
         >
-        <p class="p">
+        <p class="ppp">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
