--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="section-3">
         <h2 class="our-portfolio">Our Portfolio</h2>
         <ul class="section4-ul">
           <li>
