--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <a class="logo" href="./index.html"
           >Web<span class="span">Studio</span></a
         >
-        <ul>
-          <li class="list-1"><a href="./index.html">Studio</a></li>
+        <ul class="header-ul">
+          <li><a href="./index.html">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
