--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
           >Web<span class="span">Studio</span></a
         >
         <ul class="header-ul">
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li class="list"><a href="./index.html">Studio</a></li>
+          <li class="list"><a href="">Portfolio</a></li>
+          <li class="list"><a href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
         <ul class="address-link">
-          <li>
+          <li class="list">
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li>
+          <li class="list">
             <a href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
@@ -54,28 +54,28 @@
       <section>
         <h2>Advantages</h2>
         <ul class="section2-ul">
-          <li>
+          <li class="list">
             <h3 class="h33">Strategy</h3>
             <p class="ppp">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
+          <li class="list">
             <h3 class="h33">Punctuality</h3>
             <p class="ppp">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
+          <li class="list">
             <h3 class="h33">Diligence</h3>
             <p class="ppp">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
+          <li class="list">
             <h3 class="h33">Technologies</h3>
             <p class="ppp">
               Design practice focused on digital experiences. We bring forth a
@@ -87,22 +87,22 @@
       <section class="our-team">
         <h2 class="h22">Our Team</h2>
         <ul class="section3-ul">
-          <li>
+          <li class="list">
             <img src="./images/img1.jpg" width="264" alt="Image1" />
             <h3 class="h33">Mark Guerrero</h3>
             <p class="ppp">Product Designer</p>
           </li>
-          <li>
+          <li class="list">
             <img src="./images/img2.jpg" width="264" alt="image2" />
             <h3 class="h33">Tom Ford</h3>
             <p class="ppp">Frontend Developer</p>
           </li>
-          <li>
+          <li class="list">
             <img src="./images/img3.jpg" width="264" alt="image3" />
             <h3 class="h33">Camila Garcia</h3>
             <p class="ppp">Marketing</p>
           </li>
-          <li>
+          <li class="list">
             <img src="./images/img4.jpg" width="264" alt="image4" />
             <h3 class="h33">Daniel Wilson</h3>
             <p class="ppp">UI Designer</p>
@@ -112,32 +112,32 @@
       <section class="section-3">
         <h2 class="our-portfolio">Our Portfolio</h2>
         <ul class="section4-ul">
-          <li>
+          <li class="list">
             <img src="./images/card1.jpg" width="360" alt="card1" />
             <h3 class="h33">Banking App</h3>
             <p class="ppp">App</p>
           </li>
-          <li>
+          <li class="list">
             <img src="./images/card2.jpg" width="360" alt="card2" />
             <h3 class="h33">Cashless Payment</h3>
             <p class="ppp">Marketing</p>
           </li>
-          <li>
+          <li class="list">
             <img src="./images/card3.jpg" width="360" alt="card3" />
             <h3 class="h33">Meditation App</h3>
             <p class="ppp">App</p>
           </li>
-          <li>
+          <li class="list">
             <img src="./images/card4.jpg" width="360" alt="card4" />
             <h3 class="h33">Taxi Service</h3>
             <p class="ppp">Marketing</p>
           </li>
-          <li>
+          <li class="list">
             <img src="./images/card5.jpg" width="360" alt="card5" />
             <h3 class="h33">Screen Illustrations</h3>
             <p class="ppp">Design</p>
           </li>
-          <li>
+          <li class="list">
             <img src="./images/card6.jpg" width="360" alt="card6" />
             <h3 class="h33">Online Courses</h3>
             <p class="ppp">Marketing</p>
