--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
           >Web<span class="span">Studio</span></a
         >
         <ul class="header-ul">
-          <li class="list"><a href="./index.html">Studio</a></li>
-          <li class="list"><a href="">Portfolio</a></li>
-          <li class="list"><a href="">Contacts</a></li>
+          <li class="list"><a class="etiket" href="./index.html">Studio</a></li>
+          <li class="list"><a class="etiket" href="">Portfolio</a></li>
+          <li class="list"><a class="etiket" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
         <ul class="address-link">
           <li class="list">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="etiket" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="list">
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="etiket" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
