--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     </header>
     <main>
       <section class="hero">
+        <h1>ilk bolum</h1>
         <h1 class="h1-header">Effective Solutions for Your Business</h1>
         <button class="button" type="button">Order Service</button>
       </section>
@@ -88,6 +89,7 @@
         <h2 class="h22">Our Team</h2>
         <ul class="section3-ul">
           <li class="list">
+            <h1>ikinci kisim</h1>
             <img src="./images/img1.jpg" width="264" alt="Image1" />
             <h3 class="h33">Mark Guerrero</h3>
             <p class="ppp">Product Designer</p>
@@ -110,6 +112,7 @@
         </ul>
       </section>
       <section class="section-3">
+        <h1>ucuncu bolum</h1>
         <h2 class="our-portfolio">Our Portfolio</h2>
         <ul class="section4-ul">
           <li class="list">
