--- a/index.html
+++ b/index.html
@@ -48,13 +48,16 @@
     </header>
     <main>
       <section class="hero">
+        <h1>bolum1</h1>
         <h1 class="h1-header">Effective Solutions for Your Business</h1>
         <button class="button" type="button">Order Service</button>
       </section>
-      <section>
+      <section class="section2">
+        <h1>ucuncubolum</h1>
         <h2>Advantages</h2>
         <ul class="section2-ul">
           <li class="list">
+            <h1>liste oge 2</h1>
             <h3 class="h33">Strategy</h3>
             <p class="ppp">
               Our goal is to identify the business problem to walk away with the
