--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <header>
-      <nav class="nav">
+      <nav class="home-navbar">
         <a class="logo" href="./index.html"
           >Web<span class="span">Studio</span></a
         >
@@ -53,31 +53,31 @@
       </section>
       <section class="section2">
         <h2>Advantages</h2>
-        <ul class="section2-ul">
+        <ul class="section-ul">
           <li class="list">
-            <h3 class="h33">Strategy</h3>
-            <p class="ppp">
+            <h3 class="subtitle">Strategy</h3>
+            <p class="text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="list">
-            <h3 class="h33">Punctuality</h3>
-            <p class="ppp">
+            <h3 class="subtitle">Punctuality</h3>
+            <p class="text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="list">
-            <h3 class="h33">Diligence</h3>
-            <p class="ppp">
+            <h3 class="subtitle">Diligence</h3>
+            <p class="text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="list">
-            <h3 class="h33">Technologies</h3>
-            <p class="ppp">
+            <h3 class="subtitle">Technologies</h3>
+            <p class="text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -85,62 +85,62 @@
         </ul>
       </section>
       <section class="our-team">
-        <h2 class="h22">Our Team</h2>
-        <ul class="section3-ul">
+        <h2 class="section-header">Our Team</h2>
+        <ul class="section-ul">
           <li class="list">
             <img src="./images/img1.jpg" width="264" alt="Image1" />
-            <h3 class="h33">Mark Guerrero</h3>
-            <p class="ppp">Product Designer</p>
+            <h3 class="subtitle">Mark Guerrero</h3>
+            <p class="text">Product Designer</p>
           </li>
           <li class="list">
             <img src="./images/img2.jpg" width="264" alt="image2" />
-            <h3 class="h33">Tom Ford</h3>
-            <p class="ppp">Frontend Developer</p>
+            <h3 class="subtitle">Tom Ford</h3>
+            <p class="text">Frontend Developer</p>
           </li>
           <li class="list">
             <img src="./images/img3.jpg" width="264" alt="image3" />
-            <h3 class="h33">Camila Garcia</h3>
-            <p class="ppp">Marketing</p>
+            <h3 class="subtitle">Camila Garcia</h3>
+            <p class="text">Marketing</p>
           </li>
           <li class="list">
             <img src="./images/img4.jpg" width="264" alt="image4" />
-            <h3 class="h33">Daniel Wilson</h3>
-            <p class="ppp">UI Designer</p>
+            <h3 class="subtitle">Daniel Wilson</h3>
+            <p class="text">UI Designer</p>
           </li>
         </ul>
       </section>
       <section class="section-3">
-        <h2 class="our-portfolio">Our Portfolio</h2>
-        <ul class="section4-ul">
+        <h2 class="section-header">Our Portfolio</h2>
+        <ul class="section-ul">
           <li class="list">
             <img src="./images/card1.jpg" width="360" alt="card1" />
-            <h3 class="h33">Banking App</h3>
-            <p class="ppp">App</p>
+            <h3 class="subtitle">Banking App</h3>
+            <p class="text">App</p>
           </li>
           <li class="list">
             <img src="./images/card2.jpg" width="360" alt="card2" />
-            <h3 class="h33">Cashless Payment</h3>
-            <p class="ppp">Marketing</p>
+            <h3 class="subtitle">Cashless Payment</h3>
+            <p class="text">Marketing</p>
           </li>
           <li class="list">
             <img src="./images/card3.jpg" width="360" alt="card3" />
-            <h3 class="h33">Meditation App</h3>
-            <p class="ppp">App</p>
+            <h3 class="subtitle">Meditation App</h3>
+            <p class="text">App</p>
           </li>
           <li class="list">
             <img src="./images/card4.jpg" width="360" alt="card4" />
-            <h3 class="h33">Taxi Service</h3>
-            <p class="ppp">Marketing</p>
+            <h3 class="subtitle">Taxi Service</h3>
+            <p class="text">Marketing</p>
           </li>
           <li class="list">
             <img src="./images/card5.jpg" width="360" alt="card5" />
-            <h3 class="h33">Screen Illustrations</h3>
-            <p class="ppp">Design</p>
+            <h3 class="subtitle">Screen Illustrations</h3>
+            <p class="text">Design</p>
           </li>
           <li class="list">
             <img src="./images/card6.jpg" width="360" alt="card6" />
-            <h3 class="h33">Online Courses</h3>
-            <p class="ppp">Marketing</p>
+            <h3 class="subtitle">Online Courses</h3>
+            <p class="text">Marketing</p>
           </li>
         </ul>
       </section>
@@ -150,7 +150,7 @@
         <a class="logo" href="./index.html"
           >Web<span class="span">Studio</span></a
         >
-        <p class="ppp">
+        <p class="text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
