--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link
       rel="stylesheet"
@@ -11,17 +11,18 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet">
+      rel="stylesheet"
+    />
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
     <header>
@@ -38,7 +39,9 @@
       <address class="address">
         <ul class="address-link">
           <li class="list">
-            <a class="etiket" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="etiket" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="list">
             <a class="etiket" href="tel:+110001111111">+11 (000) 111-11-11</a>
@@ -48,7 +51,7 @@
     </header>
     <main>
       <section class="hero">
-        <h1 class="h1-header">Effective Solutions for Your Business</h1>
+        <h1 class="hero-header">Effective Solutions for Your Business</h1>
         <button class="button" type="button">Order Service</button>
       </section>
       <section class="section2">
@@ -109,7 +112,7 @@
           </li>
         </ul>
       </section>
-      <section class="section-3">
+      <section class="section-4">
         <h2 class="section-header">Our Portfolio</h2>
         <ul class="section-ul">
           <li class="list">
@@ -145,16 +148,14 @@
         </ul>
       </section>
     </main>
-    <section class="footer-section">
-      <footer class="footer">
-        <a class="logo" href="./index.html"
-          >Web<span class="span">Studio</span></a
-        >
-        <p class="text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </footer>
-    </section>
+    <footer class="footer">
+      <a class="logo" href="./index.html"
+        >Web<span class="span">Studio</span></a
+      >
+      <p class="text">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
